--- a/TAILWIND/Menu Ejercicio Web/index.html
+++ b/TAILWIND/Menu Ejercicio Web/index.html
@@ -13,13 +13,13 @@
       <div class="container mx-auto px-4">
         <div class="flex items-center justify-between py-2">
           <a href="#">
-            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">Blog</a>
+            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">BLOG</a>
           </a>
           <div class="flex">
-            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">Home</a>
-            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">About</a>
-            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">Contact</a>
-            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">Contact</a>
+            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">INICIO</a>
+            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">BLOG</a>
+            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">FORMACIÓN</a>
+            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">CONTACTO</a>
           </div>
         </div>
       </div>
