--- a/TAILWIND/Menu Ejercicio Web/index.html
+++ b/TAILWIND/Menu Ejercicio Web/index.html
@@ -9,20 +9,15 @@
 <body class="bg-white	 font-sans leading-normal tracking-normal">
 
   <nav class="bg-black">
-    <nav class="bg-gray-900">
       <div class="container mx-auto px-4">
         <div class="flex items-center justify-between py-2">
-          <a href="#">
-            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">BLOG</a>
-          </a>
+            <button class="bg-teal-300 hover:bg-stone-200 text-white font-bold py-2 px-4">BLOG</button>
           <div class="flex">
-            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">INICIO</a>
-            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">BLOG</a>
-            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">FORMACIÓN</a>
-            <a href="#" class="px-3 py-2 text-white hover:bg-gray-800">CONTACTO</a>
+            <a href="#" class="px-4 py-2 text-white hover:bg-teal-300 font-bold">INICIO</a>
+            <a href="#" class="px-4 py-2 text-white hover:bg-teal-300 font-bold">BLOG</a>
+            <a href="#" class="px-4 py-2 text-white hover:bg-teal-300 font-bold">FORMACIÓN</a>
+            <a href="#" class="px-4 py-2 text-white hover:bg-teal-300 font-bold" >CONTACTO</a>
           </div>
         </div>
-      </div>
-    </nav>
   </body>
 </html>
