--- a/TAILWIND/Menu Ejercicio Web/index.html
+++ b/TAILWIND/Menu Ejercicio Web/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  <title>Tailwind</title>
-  <link href="css/styles.css" rel="stylesheet"> 
- 
+<html lang="es">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <title>Máster en CSS</title>
+    <link rel="icon" type="favicon/x-icon" href="img/supertux.png" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/responsive.css" />
 </head>
 
-<body class="bg-white	 font-sans leading-normal tracking-normal">
-
-  <nav class="bg-black">
+<body>
+  
+<nav class="bg-black">
       <div class="container mx-auto px-4">
-        <div class="flex items-center justify-between py-2">
-            <button class="bg-teal-300 hover:bg-stone-200 text-white font-bold py-2 px-4">BLOG</button>
+        <div class="bebas lg:float-left md:ml-72 w-48 bg-cyan-400	text-center lg:mt-50 cursor-pointer sm:ml-50 hover:border-2 hover:bg-gray-300 hover:text-black">
+          <span class="gear animate-rotateGear WebSymbolRegular">S</span>
+            <h3 class="text-3xl transition-all block float-right mt-1 mr-16">BLOG</h3></div>
           <div class="flex">
-            <a href="#" class="px-4 py-2 text-white hover:bg-teal-300 font-bold">INICIO</a>
-            <a href="#" class="px-4 py-2 text-white hover:bg-teal-300 font-bold">BLOG</a>
-            <a href="#" class="px-4 py-2 text-white hover:bg-teal-300 font-bold">FORMACIÓN</a>
-            <a href="#" class="px-4 py-2 text-white hover:bg-teal-300 font-bold" >CONTACTO</a>
+            <a href="#" class="px-4 py-2 text-white hover:bg-cyan-400 font-bold">INICIO</a>
+            <a href="#" class="px-4 py-2 text-white hover:bg-cyan-400 font-bold">BLOG</a>
+            <a href="#" class="px-4 py-2 text-white hover:bg-cyan-400 font-bold">FORMACIÓN</a>
+            <a href="#" class="px-4 py-2 text-white hover:bg-cyan-400 font-bold" >CONTACTO</a>
           </div>
         </div>
   </body>
