--- a/TAILWIND/Menu Ejercicio Web/index.html
+++ b/TAILWIND/Menu Ejercicio Web/index.html
@@ -36,17 +36,15 @@
           </li>
           </ul>
         </nav>
-
-        <!--FIN MENÚ-->
-        </div>
+      </div>
     </header>
-
+ <!--FIN MENÚ-->
 
     <section class="wrap wrap-content w-11/12 mx-auto">
       <section id="info">
 
           <!-- Inicio Banner -->
-          <div id="banner" class="w-11/12 h-24 border-8 border-solid border-white shadow m-5 overflow-hidden animate-backBanner">
+          <div id="banner" class="w-11/12 h-24 border-8 border-solid border-white shadow m-5 overflow-hidden animate-backbanner">
               <h1 class="block w-9/12 text-white text-4xl font-normal tracking-widest m-7 animate-showtext">CURSOS DE DESARROLLO WEB</h1>
           </div>
           <!-- Fin Banner -->
@@ -107,6 +105,66 @@
 
         </div>
         <!--Fin Tarjetas-->
+      </section>
+
+        <!--Inicio Barra lateral-->
+        <div class="clearfix"></div>
+        <aside id="lateral">
+
+            <h3>BUSCAR</h3>
+            <div id="search">
+                <form>
+                    <input type="text" />
+                    <input type="button" value="L" class="icon" />
+                </form>
+            </div>
+
+            <h3>LOGIN</h3>
+            <div id="login" class="aside-box">
+                <form>
+                    <label id="user" class="icon">U</label>
+                    <input type="email" />
+
+                    <label id="password" class="icon">w</label>
+                    <input type="password" />
+
+                    <input type="submit" value="Entrar" />
+                    <input type="reset" value="Limpiar" />
+
+                    <a href="#">Registrate aquí</a>
+                    <a href="#">¿Has olvidado tu contraseña?</a>
+                </form>
+            </div>
+
+            <h3>REDES SOCIALES</h3>
+            <div id="social" class="aside-box">
+                <div class="twitter">
+                    <a href="#" class="icon">t</a>
+                    <p class="overlay">
+                        Twitter
+                    </p>
+                </div>
+                <div class="facebook">
+                    <a href="#" class="icon">f</a>
+                    <p class="overlay">
+                        Facebook
+                    </p>
+                </div>
+                <div class="youtube">
+                    <a href="#" class="icon">y</a>
+                    <p class="overlay">
+                        Youtube
+                    </p>
+                </div>
+            </div>
+
+            <h3>PATROCINADORES</h3>
+            <div id="sponsors" class="aside-box">
+
+            </div>
+
+        </aside>
+        <!--Fin Barra lateral-->
 
   </body>
 </html>
